fix(draftdesk): Fix text overflowing after closing draft
Overflow is hidden now, only 2 lines of the email appear in the preview.

Fixes: 508

--- a/src/app/compose/compose.component.scss
+++ b/src/app/compose/compose.component.scss
@@ -3,3 +3,14 @@
     border: 1px solid #949494;
     padding: 10px;
 }
+.draftPreview {
+    max-height: 100px;
+    overflow: hidden;
+
+    span {
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+    }
+}
